<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">say-it-right</string>

    <string name="main_start_test_button">ИГРАТЬ</string>

    <string name="level_label">Select level</string>
    <string name="level_start_test_button">Start</string>
    <string name="main_history_button">ИСТОРИЯ</string>
    <string name="main_user_label">ПРОФИЛЬ :</string>
    <string name="main_level_label">УРОВЕНЬ :</string>
    <string name="main_user_button">+</string>
    <string name="main_user_remove">-</string>
    <string name="add_user_button">ДОБАВИТЬ</string>
    <string name="input_user_name">ВВЕДИТЕ ИМЯ</string>
    <string name="test_end_button">ЗАВЕРШИТЬ</string>
    <string name="result_label">РЕЗУЛЬТАТ</string>
    <string name="result_user">ПОЛЬЗОВАТЕЛЬ</string>
    <string name="result_level">УРОВЕНЬ</string>
    <string name="result_correct">ПРАВИЛЬНЫХ ОТВЕТОВ</string>
    <string name="result_to_main_value">ГЛАВНОЕ МЕНЮ</string>
    <string name="history_page">ИСТОРИЯ</string>
    <string name="test_page">ТЕСТ</string>
    <string name="user_page">ПРОФИЛЬ</string>
    <string name="result_page">РЕЗУЛЬТАТ</string>

    <string-array name="level_array">
        <item>ЛЕГКИЙ</item>
        <item>СРЕДНИЙ</item>
        <item>ТЯЖЕЛЫЙ</item>
    </string-array>


</resources>
