<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_gravity="center"
              android:layout_margin="@dimen/main_layout_margin">

    <TextView android:id="@+id/main_user_label"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:layout_width="wrap_content"
              android:text="@string/main_user_label"
              android:layout_gravity="center"/>

    <Spinner android:id="@+id/settings_level"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:layout_width="match_parent"/>

    <TextView android:id="@+id/main_level_label"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:layout_width="wrap_content"
              android:text="@string/main_level_label"
              android:layout_gravity="center"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="2">

        <Spinner android:id="@+id/settings_user"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:layout_width="0dp"/>

        <Button android:id="@+id/main_bt_user"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/main_user_button"
                android:onClick="modifyUserData"/>

        <Button android:id="@+id/main_bt_user_remove"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/main_user_remove"
                android:onClick="removeUserData"/>

    </LinearLayout>

    <Button android:id="@+id/main_bt_start_test"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/main_start_test_button"
            android:onClick="startTest"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/main_margin"
            android:layout_marginTop="@dimen/main_margin"/>

    <Button android:id="@+id/main_bt_history"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/main_history_button"
            android:onClick="showHistory"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/main_margin"
            android:layout_marginTop="@dimen/main_margin"/>

</LinearLayout>

